Rename cookbook to rubycas and add server recipe
In order to more closely follow chef conventions and our own, this
commit renames the cookbook to just rubycas. As well, it moves the logic
for the server into a new server recipe and makes the default recipe
intentionally blank.

[#22876]

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -23,5 +23,5 @@ platforms:
 
 suites:
 - name: default
-  run_list: ["recipe[rubycas-server]"]
+  run_list: ["recipe[rubycas::server]"]
   attributes: {}
