Add test coverage for Postgres
- Fix rubycas::database to use the correct username for Postgres.
- Add Integration test coverage for Postgres recipe.
- Remove CentOS testing until it is needed.
- Use mutli_json gem to be more flexible.
- DRY up nginx integration tests for Nginx location.
- Update branch with recent version of master and add testing for
logrotate.

[22880]

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -15,14 +15,6 @@ platforms:
   driver_config:
     box: opscode-ubuntu-10.04-nochef
     box_url: https://opscode-vm.s3.amazonaws.com/vagrant/opscode_ubuntu-10.04_provisionerless.box
-- name: centos-6.4
-  driver_config:
-    box: opscode-centos-6.4
-    box_url: https://opscode-vm.s3.amazonaws.com/vagrant/opscode_centos-6.4_provisionerless.box
-- name: centos-5.9
-  driver_config:
-    box: opscode-centos-5.9
-    box_url: https://opscode-vm.s3.amazonaws.com/vagrant/opscode_centos-5.9_provisionerless.box
 
 suites:
 - name: default
@@ -35,3 +27,15 @@ suites:
       server_root_password: 'rootpass'
       server_debian_password: 'debpass'
       server_repl_password: 'replpass'
+- name: postgresdb
+  data_bags_path: "test/integration/postgresdb/data_bags"
+  run_list:
+    - "recipe[rubycas::database]"
+  attributes:
+    rubycas:
+      database:
+        data_bag_item: 'rubycas'
+        data_bag_item: 'postgres_database'
+    postgresql:
+      password:
+        postgres: '123456'
